[package]
name = "event_viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.48.0", features = ["Win32_System_EventLog", "Win32_Foundation"] }
eframe = "0.23"
egui = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = "0.27"
chrono = { version = "0.4", features = ["serde"] }
crossbeam-channel = "0.5"
widestring = "0.5"
egui_extras = "0.23"
rfd = "0.14"
evtx = "0.7"
csv = "1.3"
[build-dependencies]
winres = "0.1"